--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+   
 
 
 
@@ -59,15 +60,23 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero" id="home">
-    <div class="overlay"></div>
+ <!-- Hero Section -->
+<section class="hero" id="home">
+  <div class="hero-wrapper">
+    <!-- Text Left -->
     <div class="hero-content">
       <h1>Where Creativity<br>Meets Innovation</h1>
       <p>Advertising | Event Management | Branding</p>
-      <a href="#contact" class="hero-btn">Lets Work Together</a>
+      <a href="#footer" class="hero-btn">Let’s Work Together</a>
     </div>
-  </section>
+
+    <!-- Image Right -->
+    <div class="hero-image">
+      <img src="brand.jpeg" alt="Hero Right Image" />
+    </div>
+  </div>
+</section>
+
 
 <!-- About Section -->
   <section class="about-section" id="about">
@@ -76,8 +85,8 @@
       <h1>ABOUT US</h1>
       <p>Colours Media is a full and Event Production agency offering our partners individual service from concept and ideation through complete Advertising production, execution, management and results analysis.</p>
       <p>Colours Media is a full service publicity & Events firm representing clients in a broad range of industries — from alternative health, computer-related products, music and books — to finance, politics and general business.</p>
-      <p>We tailor each fully-integrated program specifically to our client’s objectives and desired results. We leverage our partners' sponsorship strategies through innovative operations, promotions, merchandising, consumer incentives, and media extensions.</p>
-      <p>We have Ten years of experience in implementing unique and highly successful promotional programs associated with Advertising and events and their respective industries. It is this experience, combined with a tremendous passion for what we do, that has formed the foundation of the company’s excellent reputation.</p>
+      <p>We tailor each fully-integrated program specifically to our client's objectives and desired results. We leverage our partners' sponsorship strategies through innovative operations, promotions, merchandising, consumer incentives, and media extensions.</p>
+      <p>We have Ten years of experience in implementing unique and highly successful promotional programs associated with Advertising and events and their respective industries. It is this experience, combined with a tremendous passion for what we do, that has formed the foundation of the company's excellent reputation.</p>
       <p>We as an Advertising and event management & advertising company in India collaborate with our clients to deliver more than interesting theoretical solutions, we provide real answers to real problems. We work with you until the very end of a project to ensure that you get what you need and we are there for ongoing support too.</p>
       <p>By understanding the needs of our clients and customizing our solutions based on their objectives, our outdoor advertising serves our clients effectively, efficiently and economically. As our clients' needs have changed, we've changed too, adding technologies and services that allow us to provide a full range of integrated communication solutions.</p>
       <p>We are a fully integrated Advertising and event management company, having best in the class capabilities in the area of advertising, media planning/buying, direct marketing, promotions and public relations. In a business where profit margins are unpredictable as well as inordinately high, we are transparent in all our dealings and our services are reasonably priced.</p>
@@ -114,10 +123,10 @@
     <div class="service-box">
       <h3>In-Shop Branding & Promotions</h3>
       <p>
-        The consumer when walks in – the intent of purchase is mostly likely there. The challenge then becomes to entice him towards your brand or product. This is all the more important in the launch phase of the product. Colours Media has executed in-shop Branding and promotions in most of the leading markets of the country.
+        The consumer when walks in - the intent of purchase is mostly likely there. The challenge then becomes to entice him towards your brand or product. This is all the more important in the launch phase of the product. Colours Media has executed in-shop Branding and promotions in most of the leading markets of the country.
       </p>
       <p>
-        COLOURS MEDIA creative team can create compact display and merchandising concepts and produce the same. The operational team can logistically manage the tie–ups, permissions and set-up multi city, multi outlet in-shop promotions across the country. The largest FMCG and Consumer Durable companies use COLOURS MEDIA expertise to execute multi city in-shop promotions programs.
+        COLOURS MEDIA creative team can create compact display and merchandising concepts and produce the same. The operational team can logistically manage the tie-ups, permissions and set-up multi city, multi outlet in-shop promotions across the country. The largest FMCG and Consumer Durable companies use COLOURS MEDIA expertise to execute multi city in-shop promotions programs.
       </p>
     </div>
 
@@ -125,7 +134,7 @@
     <div class="service-box">
       <h3>Product Launch</h3>
       <p>
-        The need to create an impact and hype– amongst the right target segment– is the key challenge when implementing a product launch event.
+        The need to create an impact and hype- amongst the right target segment-is the key challenge when implementing a product launch event.
         COLOURS MEDIA provides you with the accurate concept and storyboard to launch your product with a dazzling effect.
         We also help our clients to generate the right audience to experience the product launch.
       </p>
@@ -250,17 +259,17 @@
             <tr>
               <th>Speed (4 Heads)</th>
               <td>
-                2 PASS: 360×360dpi – 115 sqm/h<br>
-                3 PASS: 360×540dpi – 76 sqm/h<br>
-                4 PASS: 360×720dpi – 57 sqm/h
+                2 PASS: 360x360dpi - 115 sqm/h<br>
+                3 PASS: 360x540dpi - 76 sqm/h<br>
+                4 PASS: 360x720dpi - 57 sqm/h
               </td>
             </tr>
             <tr>
               <th>Speed (8 Heads)</th>
               <td>
-                2 PASS: 360×360dpi – 210 sqm/h<br>
-                3 PASS: 360×540dpi – 130 sqm/h<br>
-                4 PASS: 360×720dpi – 100 sqm/h
+                2 PASS: 360x360dpi - 210 sqm/h<br>
+                3 PASS: 360x540dpi - 130 sqm/h<br>
+                4 PASS: 360x720dpi - 100 sqm/h
               </td>
             </tr>
             <tr>
@@ -305,7 +314,7 @@
             </tr>
             <tr>
               <th>Environment</th>
-              <td>Temperature: 18–22°C / Humidity: 20–80%</td>
+              <td>Temperature: 18-22°C / Humidity: 20-80%</td>
             </tr>
             <tr>
               <th>Dimensions / Weight</th>
@@ -355,7 +364,7 @@
             </tr>
             <tr>
               <th>Dimensions</th>
-              <td>2430 × 690 × 1370 mm</td>
+              <td>2430 x 690 x 1370 mm</td>
             </tr>
             <tr>
               <th>Weight</th>
@@ -473,7 +482,7 @@
             </tr>
             <tr>
               <th>Power supply</th>
-              <td colspan="4">Single-phase (AC 100–120V / AC 220–240V)</td>
+              <td colspan="4">Single-phase (AC 100-120V / AC 220-240V)</td>
             </tr>
             <tr>
               <th>Power consumption</th>
@@ -482,16 +491,16 @@
             <tr>
               <th>Operational Environment</th>
               <td colspan="4">
-                Temperature: 20–30°C (68–86 °F)<br>
-                Humidity: 35–65% RH (Non-condensing)
+                Temperature: 20-30°C (68-86 °F)<br>
+                Humidity: 35-65% RH (Non-condensing)
               </td>
             </tr>
             <tr>
-              <th>Dimensions (W×D×H)</th>
-              <td>1,965 × 700 × 1,392 mm<br>(77″ × 28″ × 55″)</td>
-              <td>2,255 × 700 × 1,392 mm<br>(89″ × 28″ × 55″)</td>
-              <td>2,525 × 700 × 1,392 mm<br>(99″ × 28″ × 55″)</td>
-              <td>2,775 × 700 × 1,392 mm<br>(109″ × 28″ × 55″)</td>
+              <th>Dimensions (WxDxH)</th>
+              <td>1,965 x 700 x 1,392 mm<br>(77″ x 28″ x 55″)</td>
+              <td>2,255 x 700 x 1,392 mm<br>(89″ x 28″ x 55″)</td>
+              <td>2,525 x 700 x 1,392 mm<br>(99″ x 28″ x 55″)</td>
+              <td>2,775 x 700 x 1,392 mm<br>(109″ x 28″ x 55″)</td>
             </tr>
             <tr>
               <th>Weight</th>
@@ -528,7 +537,7 @@
             </tr>
             <tr>
               <th>Laser Tube Life Span</th>
-              <td>8000–10000 hours working/hours</td>
+              <td>8000-10000 hours working/hours</td>
             </tr>
             <tr>
               <th>Applicable Materials</th>
@@ -544,7 +553,7 @@
             </tr>
             <tr>
               <th>Laser Energy Control</th>
-              <td>1–100 percent set by hand or software</td>
+              <td>1-100 percent set by hand or software</td>
             </tr>
             <tr>
               <th>Worktable (Optional)</th>
@@ -560,7 +569,7 @@
             </tr>
             <tr>
               <th>Operating Temperature</th>
-              <td>5°C–35°C</td>
+              <td>5°C-35°C</td>
             </tr>
             <tr>
               <th>Resolution Ratio</th>
@@ -618,7 +627,7 @@
           <tbody>
             <tr>
               <th>1. Machine Dimensions</th>
-              <td>810 × 610 × 395mm</td>
+              <td>810 x 610 x 395mm</td>
             </tr>
             <tr>
               <th>2. Construction Material</th>
@@ -626,7 +635,7 @@
             </tr>
             <tr>
               <th>3. Engraving Area</th>
-              <td>590 × 390mm</td>
+              <td>590 x 390mm</td>
             </tr>
             <tr>
               <th>4. Z-axis Stroke</th>
@@ -650,7 +659,7 @@
             </tr>
             <tr>
               <th>9. Machine Weight</th>
-              <td>52kg–60kg (including packaging)</td>
+              <td>52kg-60kg (including packaging)</td>
             </tr>
             <tr>
               <th>10. Main Application</th>
