--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 
 <!-- Swiper CSS after (it adds its own only) -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
    
-
-
-
 <!-- Swiper JS first -->
 <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
@@ -28,18 +24,12 @@
 <a href="#contact" class="sticky-contact" title="Let's Talk">
   <i class="fas fa-comments"></i>
 </a>
-
-
-
 <a href="https://wa.me/918699272552" class="sticky-contact" target="_blank" title="Chat on WhatsApp">
   <i class="fab fa-whatsapp"></i>
 </a>
-
-
-
-
-
-
+<button class="nav-toggle" aria-label="Toggle navigation">
+  <i class="fas fa-bars"></i>
+</button>
 </head>
 <body>
 
