--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
 
 
 
- <!-- Hero Section -->
 <section class="hero" id="home">
   <div class="hero-wrapper">
-    <!-- Text Left -->
+    <!-- Left Text -->
     <div class="hero-content">
       <h1>Where Creativity<br>Meets Innovation</h1>
       <p>Advertising | Event Management | Branding</p>
       <a href="#footer" class="hero-btn">Let’s Work Together</a>
     </div>
 
-    <!-- Image Right -->
+    <!-- Right Image -->
     <div class="hero-image">
-      <img src="brand.jpeg" alt="Hero Right Image" />
+      <img src="brand.jpeg" alt="Hero Image" />
     </div>
   </div>
 </section>
+
 
 
 <!-- About Section -->
@@ -217,7 +217,7 @@
   <p class="clients-subtext">We have worked with some of the most trusted brands across India.</p>
 
   <div class="clients-grid">
-    <div class="client-logos"><img src="/IVAS.jpeg" alt="IVAS"></div>
+    <div class="client-logos"><img src="IVAS.jpeg" alt="IVAS"></div>
     <div class="client-logos"><img src="whirlpool.jpg" alt="Whirlpool"></div>
     <div class="client-logos"><img src="Dollar.jpg" alt="Dollar"></div>
     <div class="client-logos"><img src="emami.jpg" alt="Emami"></div>
@@ -232,7 +232,20 @@
     <div class="client-logos"><img src="johnson.png" alt="Johnson"></div>
     <div class="client-logos"><img src="cera.gif" alt="CERA"></div>
     <div class="client-logos"><img src="vir-laminate-logo.jpg" alt="VIR"></div>
+    <div class="client-logos"><img src="AGL TILES.webp" alt="AGL TILES"></div>
+    <div class="client-logos"><img src="fusion.webp" alt="fusion"></div>
+    <div class="client-logos"><img src="APLAPOLLO.jpg" alt="Aplapollo"></div>
+    <div class="client-logos"><img src="uniko.gif" alt="uniko"></div>
+    <div class="client-logos"><img src="VIVO.png" alt="vivo"></div>
+    <div class="client-logos"><img src="OPPO.jpg" alt="oppo"></div>
+    <div class="client-logos"><img src="safari.jpg" alt="safari"></div>
+    <div class="client-logos"><img src="exxaro.jpg" alt="exxaro"></div>
+    <div class="client-logos"><img src="hero homes.png" alt="hero homes"></div>
+    <div class="client-logos"><img src="tulsi.webp" alt="tulsi"></div>
+    <div class="client-logos"><img src="KPT PIPES.jpeg" alt="KPT Pipes"></div>
+    <div class="client-logos"><img src="bicano.webp" alt="bicano"></div>
   </div>
+
 </section>
 
 
@@ -738,7 +751,7 @@
 
       <!-- Repeat this swiper-box 8 times for 8 brands -->
       <div class="gallery-swiper-box">
-        <div class="gallery-swiper-title">INFRA</div>
+        <div class="gallery-swiper-title">IVAS - INFRA </div>
         <div class="swiper gallery-swiper-1">
           <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="infra1.jpeg" /></div>
@@ -746,6 +759,9 @@
             <div class="swiper-slide"><img src="infra3.jpeg" /></div>
             <div class="swiper-slide"><img src="infra4.jpeg" /></div>
             <div class="swiper-slide"><img src="infra5.jpeg" /></div>
+            <div class="swiper-slide"><img src="infra6.png" /></div>
+            <div class="swiper-slide"><img src="infra7.png" /></div>
+            <div class="swiper-slide"><img src="infra8.png" /></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -837,6 +853,8 @@
       <div class="swiper-slide"><img src="Simpolo2.jpeg" /></div>
       <div class="swiper-slide"><img src="Simpolo3.jpeg" /></div>
       <div class="swiper-slide"><img src="Simpolo4.jpeg" /></div>
+      <div class="swiper-slide"><img src="simpolo5.jpg" /></div>
+      <div class="swiper-slide"><img src="simpolo6.jpg" /></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -876,6 +894,9 @@
       <div class="swiper-slide"><img src="SUNHEARRT2.jpeg" /></div>
       <div class="swiper-slide"><img src="SUNHEARRT3.jpeg" /></div>
       <div class="swiper-slide"><img src="SUNHEARRT4.jpeg" /></div>
+      <div class="swiper-slide"><img src="SUNHEARRT5.jpg" /></div>
+      <div class="swiper-slide"><img src="SUNHEARRT6.jpg" /></div>
+      <div class="swiper-slide"><img src="SUNHEARRT7.jpg" /></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -916,6 +937,9 @@
       <div class="swiper-slide"><img src="JOHNSON3.jpeg" /></div>
       <div class="swiper-slide"><img src="JOHNSON4.jpeg" /></div>
       <div class="swiper-slide"><img src="JOHNSON5.jpeg" /></div>
+      <div class="swiper-slide"><img src="JOHNSON6.png" /></div>
+      <div class="swiper-slide"><img src="JOHNSON7.jpg" /></div>
+      <div class="swiper-slide"><img src="JOHNSON8.jpg" /></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -929,13 +953,17 @@
       <div class="swiper-slide"><img src="cera2.jpeg" /></div>
       <div class="swiper-slide"><img src="cera3.jpeg" /></div>
       <div class="swiper-slide"><img src="cera4.jpeg" /></div>
+      <div class="swiper-slide"><img src="cera5.jpg" /></div>
+      <div class="swiper-slide"><img src="cera6.jpg" /></div>
+      <div class="swiper-slide"><img src="cera7.jpg" /></div>
+      <div class="swiper-slide"><img src="cera8.jpg" /></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
 </div>
 
 <div class="gallery-swiper-box">
-  <div class="gallery-swiper-title">VIR</div>
+  <div class="gallery-swiper-title">VIR LAMINATES</div>
   <div class="swiper gallery-swiper-12">
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="VIR1.jpeg" /></div>
@@ -943,6 +971,10 @@
       <div class="swiper-slide"><img src="VIR3.jpeg" /></div>
       <div class="swiper-slide"><img src="VIR4.jpeg" /></div>
       <div class="swiper-slide"><img src="VIR5.jpeg" /></div>
+      <div class="swiper-slide"><img src="VIR6.jpg" /></div>
+      <div class="swiper-slide"><img src="VIR7.jpg" /></div>
+      <div class="swiper-slide"><img src="VIR8.jpg" /></div>
+      <div class="swiper-slide"><img src="VIR9.jpg" /></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -956,6 +988,98 @@
       <div class="swiper-slide"><img src="ROLLUP STANDEE2.jpeg" /></div>
       <div class="swiper-slide"><img src="ROLLUP STANDEE3.jpeg" /></div>
       <div class="swiper-slide"><img src="ROLLUP STANDEE4.jpeg" /></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+<div class="gallery-swiper-box">
+  <div class="gallery-swiper-title">AGL TILES</div>
+  <div class="swiper gallery-swiper-12">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="AGL1.jpg" /></div>
+      <div class="swiper-slide"><img src="AGL2.jpg" /></div>
+      <div class="swiper-slide"><img src="AGL3.jpg" /></div>
+      <div class="swiper-slide"><img src="AGL4.jpg" /></div>
+      <div class="swiper-slide"><img src="AGL5.jpg" /></div>
+      <div class="swiper-slide"><img src="AGL6.jpg" /></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+<div class="gallery-swiper-box">
+  <div class="gallery-swiper-title">VIVO</div>
+  <div class="swiper gallery-swiper-12">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="VIVO1.jpg" /></div>
+      <div class="swiper-slide"><img src="VIVO2.jpg" /></div>
+      <div class="swiper-slide"><img src="VIVO3.jpg" /></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+<div class="gallery-swiper-box">
+  <div class="gallery-swiper-title">OPPO</div>
+  <div class="swiper gallery-swiper-12">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="OPPO1.jpg"/></div>
+      <div class="swiper-slide"><img src="OPPO2.jpg" /></div>
+      <div class="swiper-slide"><img src="OPPO3.jpg" /></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+<div class="gallery-swiper-box">
+  <div class="gallery-swiper-title">SAFARI</div>
+  <div class="swiper gallery-swiper-12">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="safari1.jpg" /></div>
+      <div class="swiper-slide"><img src="safari2.jpg" /></div>
+      </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+<div class="gallery-swiper-box">
+  <div class="gallery-swiper-title">BEST CHOICE OIL</div>
+  <div class="swiper gallery-swiper-12">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="BEST CHOICE OIL1.jpg" /></div>
+      <div class="swiper-slide"><img src="BEST CHOICE OIL2.jpg" /></div>
+      <div class="swiper-slide"><img src="BEST CHOICE OIL3.jpg" /></div>
+      <div class="swiper-slide"><img src="BEST CHOICE OIL4.jpg" /></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+<div class="gallery-swiper-box">
+  <div class="gallery-swiper-title">HOARDING STRUCTURE</div>
+  <div class="swiper gallery-swiper-12">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="HOARDING STRUCTURE1.jpg" /></div>
+      <div class="swiper-slide"><img src="HOARDING STRUCTURE2.jpg" /></div>
+      <div class="swiper-slide"><img src="HOARDING STRUCTURE3.jpg" /></div>
+      <div class="swiper-slide"><img src="HOARDING STRUCTURE4.jpg" /></div>
+      <div class="swiper-slide"><img src="HOARDING STRUCTURE5.jpg" /></div>
+      <div class="swiper-slide"><img src="HOARDING STRUCTURE6.jpg" /></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+</div>
+
+<div class="gallery-swiper-box">
+  <div class="gallery-swiper-title">CUTOUT STANDEE</div>
+  <div class="swiper gallery-swiper-12">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="CUTOUT STANDEE1.png" /></div>
+      <div class="swiper-slide"><img src="cutout2.png" /></div>
+      <div class="swiper-slide"><img src="cutout3.png" /></div>
+      <div class="swiper-slide"><img src="cutout4.png" /></div>
+      <div class="swiper-slide"><img src="cutout5.png" /></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -1042,3 +1166,8 @@
 
 </body>
 </html>
+
+
+
+
+
